# Drift

./: CMakeLists.txt  README.md
app/: main.cpp
dependancy/stb_image/lib/: stb_image.cpp
include/: camera.hpp  entity.hpp  mesh.hpp  model.hpp  scene.hpp  shader.hpp  texture.hpp  transformation.hpp
ressource/model/diamond/: diamond.mtl
ressource/model/dragon/: dragon.mtl
ressource/model/lamp/: lamp.mtl
ressource/model/maxi/: maximilian.mtl
ressource/model/pot/: pot.mtl
ressource/model/wall/: wall.mtl
shader/: light_fragment.fs  light_vertex.vs  lighting_fragment.fs  lighting_vertex.vs  wireframe_fragment.fs  wireframe_vertex.vs
src/: camera.cpp  entity.cpp  mesh.cpp  model.cpp  scene.cpp  shader.cpp  texture.cpp  transformation.cpp
